# time_executioner

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  USAGE.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  sonar-project.properties  tox.ini
.github/workflows/: python-package.yml
src/: __init__.py  time_executioner.py
tests/: test_time_executioner.py
time_executioner/: time_executioner.py
