[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "time_executioner"
dynamic = ["version"]
authors = [
    { name = "Barclay Loftus", email = "barclay.loftus@rmdevmgmt.com" },
]
description = "Common library to time the execution of functions"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Rapid-Medical/time_executionert"
Issues = "https://github.com/Rapid-Medical/time_executioner/issues"